Added another paragraph

--- a/GitPractice.html
+++ b/GitPractice.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>Webpage for Git Practice</p>
+    <p>adding another paragraph</p>
     <h1>Filler content</h1>
     <p>Lorem ipsum dolor sit amet.</p>
 </body>
