--- a/GitPractice.html
+++ b/GitPractice.html
@@ -9,6 +9,7 @@
     <p>Webpage for Git Practice</p>
     <p>adding another paragraph</p>
     <h1>Filler content</h1>
+    <p>Another paragraph</p>
     <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
