--- a/GitPractice.html
+++ b/GitPractice.html
@@ -11,5 +11,7 @@
     <h1>Filler content</h1>
     <p>Another paragraph</p>
     <p>Lorem ipsum dolor sit amet.</p>
+
+    <h3>adding copy for Masood branch</h3>
 </body>
 </html>
